Add github account

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="https://github.com/tsion1216" target="_blank">Tsion Taye</a>
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is <a href="https://github.com/tsion1216/weather-App" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
