--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="https://github.com/tsion1216" target="_blank">Tsion Taye</a>
           and is <a href="https://github.com/tsion1216/weather-App" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://weatherappcheck12.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
